# spring-vision

./: .editorconfig  .gitattributes  .gitignore  AGENT.md  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  CURSOR_IDE_RULES.md  DATASET_README.md  DJL_USAGE.md  FIRST_TIME_SETUP.md  FIXME.md  JPA_SUPPORT.md  Jenkinsfile  LICENSE  MCP_USAGE.md  Makefile  PACKAGE_MIGRATION.md  PACKAGE_MIGRATION_QUICK_START.md  PLAN.md  PROMPT.md  README.md  README_PACKAGE_MIGRATION.txt  README_PHASE3.md  RUN_EXAMPLES.md  SHARE.md  TODO.md  build.sh  checkstyle.xml  deploy-to-central.sh  docker-compose.yml  facebytes.sh  javadocs.txt  pom.xml  prometheus.yml  qodana.yaml  run.java  run.sh  set-version.sh  sync.sh  (+2 more)
.github/: CHECKLIST.md  DEPLOYMENT.md  QUICK_REFERENCE.md  SETUP_COMPLETE.md  mcp-config.json  pull_request_template.md
cli/: README.md  dependency-reduced-pom.xml  pom.xml
compreface/: README.md  docker-compose.yml  pom.xml
core/: Dockerfile  download-models.sh  pom.xml
cyber/: README.md  pom.xml
datasets/: coco8-ground-truth.md  tests.yaml
deepface/: README.md  pom.xml
docs/: API_DOCUMENTATION.md  API_REFACTORING_COMPLETE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_SUMMARY.md  BATCH1_UTILITY_CAPABILITIES_COMPLETE.md  BATCH2_ENHANCED_DETECTION_COMPLETE.md  BATCH3_COMPLETE.md  BATCH3_FALL_DETECTION_COMPLETE.md  BATCH3_HEARTRATE_MCP_ADDED.md  BATCH3_PROGRESS.md  BATCH4_COMPLETE.md  BATCH4_SECURITY_IMPLEMENTATION.md  CAPABILITIES_IMPLEMENTATION_STATUS.md  CLEANUP_SUMMARY.md  COMPREFACE_INTEGRATION.md  CONFIG.md  CONTRIBUTING.md  CONTRIBUTING_MODULE_GUIDELINES.md  DEEPFACE_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DETECTOR_MODELS.md  DETECTOR_SETUP_COMPLETE.md  DEVOPS.md  DJL_INTEGRATION_COMPLETE.md  DJL_MIGRATION.md  DJL_MIGRATION_COMPLETE.md  DJL_MIGRATION_GUIDE.md  DJL_MIGRATION_SUMMARY.md  DJL_REFACTORING_SUMMARY.md  EMBEDDING_FIX.md  FACEBYTES_ANALYSIS.md  FACE_RECOGNITION_QUICKSTART.md  FACE_RECOGNITION_ROADMAP.md  FINAL_VISIONTEMPLATE_CLEANUP.md  FIXES.md  FIXME.md  GETTING_STARTED.md  GPU_SUPPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  (+46 more)
examples/: README.md  pom.xml
facebytes/: README.md  pom.xml
health/: README.md  pom.xml
insightface/: README.md  docker-compose.yml  pom.xml
mcp/: CHANGELOG.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  RESPONSES.md  TOOLS_EXAMPLES.md  TROUBLESHOOTING.md  TUTORIAL.md  docker-compose.yml  pom.xml  test-logging.sh
mediapipe/: README.md  download-models.sh  pom.xml
model/: README.md  pom.xml
persistence/: README.md  pom.xml
robotics/: README.md  pom.xml
scripts/: README-MODELS.md  README.md  compute_model_checksums.sh  download-detector-models.sh  download-facebytes-models.sh  download-models-quick.sh  download-models.sh  find_todos.sh  get-spring-vision-image-tag.sh  (+8 more)
spring-vision-deepface/python-consumer/: Dockerfile  pyproject.toml
spring-vision-deepface/python-consumer/src/deepface_consumer/: __init__.py
(+1064 files in other folders)
