[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepface_consumer"
version = "0.1.0"
description = "Python consumer for face embedding pipeline using DeepFace"
authors = [
    {name = "Spring Vision Team"}
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
deepface_consumer = "deepface_consumer:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
