[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepface_consumer"
version = "0.1.0"
description = "Python consumer for face embedding pipeline using DeepFace"
authors = [
    {name = "Spring Vision Team"}
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "kafka-python>=2.0.2",
    "deepface>=0.0.84",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "opencv-python>=4.8.0",
    "mtcnn>=0.1.1",
    "retina-face>=0.0.13",
    "protobuf>=3.20.0,<4.0.0",
    "tensorflow-cpu>=2.15.0",
    "tf-keras>=2.15.0",
]

[project.scripts]
deepface_consumer = "deepface_consumer:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
